--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
+    "firebase": "^9.6.9",
+    "firebase-admin": "^10.0.2",
     "moment": "^2.29.1",
     "mongoose": "^6.2.7",
     "path": "^0.12.7"
