--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.2.7",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
