--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "express": "^4.17.3",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "express-graphql": "^0.12.0",
     "faker": "^6.6.6",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
+    "graphql": "^15.3.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^10.0.0",
     "moment": "^2.29.3",
