--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-flash": "^0.0.2",
-    "express-session": "^1.17.3",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.3",
     "faker": "^6.6.6",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
@@ -42,6 +42,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
+    "socket.io": "^4.5.1",
     "supertest": "^6.2.3",
     "twilio": "^3.77.0",
     "winston": "^3.7.2",
